--- a/src/test/resources/org/eolang/lints/packs/pos-bigger-than-line/catches-pos-bigger-than-line.yaml
+++ b/src/test/resources/org/eolang/lints/packs/pos-bigger-than-line/catches-pos-bigger-than-line.yaml
@@ -24,10 +24,12 @@ sheets:
   - /org/eolang/lints/critical/pos-bigger-than-line.xsl
 asserts:
   - /defects[count(defect[@severity='critical'])=1]
-  - /defects/defect[@line='3']
+  - /defects/defect[@line='2']
 document: |
   <program>
+    <listing># No comments.
+  [] &gt;foo</listing>
     <objects>
-      <o line="3" pos="4" name="foo"/>
+      <o line="2" pos="20" name="foo"/>
     </objects>
   </program>
