--- a/src/test/resources/org/eolang/lints/packs/pos-bigger-than-line/ignores-line-absence.yaml
+++ b/src/test/resources/org/eolang/lints/packs/pos-bigger-than-line/ignores-line-absence.yaml
@@ -26,7 +26,9 @@ asserts:
   - /defects[count(defect[@severity='critical'])=0]
 document: |
   <program>
+    <listing># No comments.
+  [] &gt;foo</listing>
     <objects>
-      <o pos="3" name="foo"/>
+      <o pos="15" name="foo"/>
     </objects>
   </program>
