--- a/src/test/resources/org/eolang/lints/packs/pos-bigger-than-line/passes-when-no-pos.yaml
+++ b/src/test/resources/org/eolang/lints/packs/pos-bigger-than-line/passes-when-no-pos.yaml
@@ -26,7 +26,9 @@ asserts:
   - /defects[count(defect[@severity='critical'])=0]
 document: |
   <program>
+    <listing># No comments.
+  [] &gt;foo</listing>
     <objects>
-      <o line="3" name="foo"/>
+      <o line="2" name="foo"/>
     </objects>
   </program>
