--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@ SOFTWARE.
   </parent>
   <groupId>org.eolang</groupId>
   <artifactId>lints</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.0.30</version>
   <packaging>jar</packaging>
   <name>lints</name>
   <description>Style checkers (linters) for EO language</description>
