--- a/src/test/resources/org/eolang/lints/packs/pos-bigger-than-line/catches-broken-pos-in-nested-object.yaml
+++ b/src/test/resources/org/eolang/lints/packs/pos-bigger-than-line/catches-broken-pos-in-nested-object.yaml
@@ -28,9 +28,9 @@ asserts:
 document: |
   <program>
     <objects>
-      <o line="2" pos="20" name="foo">
-        <o line="2" name="xyz">
-          <o line="2">data</o>
+      <o line="1" name="foo">
+        <o line="2" pos="5" name="xyz">
+          <o line="2">dat</o>
         </o>
       </o>
     </objects>
