feat(#13): allows present

--- a/src/test/resources/org/eolang/lints/packs/missing-caret-references/allows-caret-ref-with-present-object.yaml
+++ b/src/test/resources/org/eolang/lints/packs/missing-caret-references/allows-caret-ref-with-present-object.yaml
@@ -4,10 +4,10 @@
 sheets:
   - /org/eolang/lints/errors/missing-caret-references.xsl
 asserts:
-  - /defects[count(defect[@severity='error'])=1]
-  - /defects/defect[@line='4']
+  - /defects[count(defect[@severity='error'])=0]
 input: |
   # Foo.
   [] > foo
+    [] > hello
     [] > bar
       ^.hello > @
