--- a/src/test/resources/org/eolang/lints/packs/single/sparse-decoration/catches-sparse-without-docblock.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/sparse-decoration/catches-sparse-without-docblock.yaml
@@ -4,9 +4,10 @@
 sheets:
   - /org/eolang/lints/misc/sparse-decoration.xsl
 asserts:
-  - /defects[count(defect[@severity='warning'])=2]
+  - /defects[count(defect[@severity='warning'])=1]
+  - /defects/defect[@line='3']
 input: |
-  # No comments.
-  [] > decorates-abstract
-    [] > @
-      five > @
+  # App.
+  [] > app
+    [] > is-true
+      0.eq 0 > @
