--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   </parent>
   <groupId>org.eolang</groupId>
   <artifactId>lints</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.0.47</version>
   <packaging>jar</packaging>
   <name>lints</name>
   <description>Style checkers (linters) for EO language</description>
