feat(256): check for inner objects

--- a/src/test/resources/org/eolang/lints/packs/single/base-must-be-merged/no-merge-if-object-has-inner-object.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/base-must-be-merged/no-merge-if-object-has-inner-object.yaml
@@ -9,7 +9,7 @@ document: |
   <object>
     <o base=".foo">
       <o base="bar">
-        A1-B2-C3-D4-E5
+        <o base="baz"/>
       </o>
     </o>
   </object>
