--- a/pom.xml
+++ b/pom.xml
@@ -359,7 +359,7 @@
                     <class>org.eolang.lints.PkMonoTest</class>
                     <class>org.eolang.lints.LtByXslTest</class>
                     <class>org.eolang.lints.PkWpaTest</class>
-                    <class>org.eolang.lints.PackageTest</class>
+                    <class>org.eolang.lints.EoPackageTest</class>
                     <class>org.eolang.lints.LtUnlintNonExistingDefectWpaTest</class>
                     <class>org.eolang.lints.LtTestNotVerbTest</class>
                     <class>org.eolang.lints.WpaLintsTest</class>
