feat(#566): fix special names test

--- a/src/test/resources/org/eolang/lints/packs/single/invalid-name-notation/allows-special-names.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/invalid-name-notation/allows-special-names.yaml
@@ -7,6 +7,8 @@ asserts:
   - /defects[count(defect[@severity='warning'])=0]
 input: |
   # App.
-  [] >>
+  [] > app
+    x > f
+      [] >>
     foo > @
-      bar ?
+    [] > baz ?
