--- a/src/test/resources/org/eolang/lints/packs/single/phi-not-at-top-level/catches-phi-in-very-nested-object.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/phi-not-at-top-level/catches-phi-in-very-nested-object.yaml
@@ -4,10 +4,13 @@
 sheets:
   - /org/eolang/lints/misc/phi-not-at-top-level.xsl
 asserts:
-  - /defects[count(defect[@severity='warning'])=0]
+  - /defects[count(defect[@severity='warning'])=1]
+  - /defects/defect[@line='5']
 input: |
   # No comments.
   [] > app
-    bar > @
-    foo > x
-      @
+    a > x
+      b
+        c > @
+          d
+            e
