--- a/src/test/resources/org/eolang/lints/packs/single/anonymous-formation/allows-anonymous-accessing-defined-object-inside-nested-formation.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/anonymous-formation/allows-anonymous-accessing-defined-object-inside-nested-formation.yaml
@@ -12,5 +12,6 @@ input: |
       []
         build 1 > @
         [i] > build
+          42 > b
           i > @
-          ^.build (1.plus @) > next
+          ^.build (1.plus b) > next
