--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -66,7 +66,7 @@ jobs:
           sign-commits: true
   report:
     name: Create issue on failure
-    needs: build
+    needs: benchmark
     if: failure() && github.event.pull_request == null
     runs-on: ubuntu-24.04
     steps:
