--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,23 @@
       <version>5.11</version>
     </dependency>
     <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy-all</artifactId>
+      <version>3.0.24</version>
+      <type>pom</type>
+      <exclusions>
+        <exclusion>
+          <!--
+            We need to exclude it, since its dependency `Maven:jline:jline:2.14.6` has no license
+            information. Exclusion will work only under project dependencies section. Don't move it
+            to `gmavenplus-plugin` dependencies.
+          -->
+          <groupId>org.codehaus.groovy</groupId>
+          <artifactId>groovy-groovysh</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
       <groupId>com.yegor256</groupId>
       <artifactId>mktmp</artifactId>
       <version>0.0.5</version>
@@ -655,20 +672,6 @@
             </configuration>
           </execution>
         </executions>
-        <dependencies>
-          <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <version>3.0.24</version>
-            <type>pom</type>
-            <exclusions>
-              <exclusion>
-                <groupId>org.codehaus.groovy</groupId>
-                <artifactId>groovy-groovysh</artifactId>
-              </exclusion>
-            </exclusions>
-          </dependency>
-        </dependencies>
       </plugin>
     </plugins>
   </build>
