bug(#576): relativize clashes

--- a/src/test/resources/org/eolang/lints/packs/wpa/inconsistent-args/catches-inconsistency-in-locals.yaml
+++ b/src/test/resources/org/eolang/lints/packs/wpa/inconsistent-args/catches-inconsistency-in-locals.yaml
@@ -7,6 +7,8 @@ asserts:
   - /defects[count(defect)=2]
   - /defects/defect[@object='foo' and @line='4']
   - /defects/defect[@object='foo' and @line='5']
+  - /defects/defect[contains(normalize-space(), 'clashes with [foo:4]')]
+  - /defects/defect[contains(normalize-space(), 'clashes with [foo:5]')]
 foo.eo: |
   # Foo.
   [as-bytes] > foo
