bug(#13): no errors

--- a/src/test/resources/org/eolang/lints/packs/single/missing-rho-reference/allows-rho-ref-to-present-object-from-deeply-nested.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/missing-rho-reference/allows-rho-ref-to-present-object-from-deeply-nested.yaml
@@ -10,9 +10,9 @@ input: |
   [] > foo
     "yes" > message
     [] > bar
-      while
+      while > @
         [i] >>
-          if.
+          if. > @
             i.lt 5
             QQ.io.stdout
               ^.^.message
