--- a/src/test/resources/org/eolang/lints/packs/wpa/inconsistent-args/catches-inconsistency-with-void-name-clash.yaml
+++ b/src/test/resources/org/eolang/lints/packs/wpa/inconsistent-args/catches-inconsistency-with-void-name-clash.yaml
@@ -7,6 +7,8 @@ asserts:
   - /defects[count(defect[@severity='warning'])=2]
   - /defects/defect[@line='4']
   - /defects/defect[@line='5']
+  - /defects/defect[contains(normalize-space(), 'clashes with [main:4]')]
+  - /defects/defect[contains(normalize-space(), 'clashes with [main:5]')]
 main.eo: |
   # Main.
   [] > main
