Update lint messages for clarity and consistency.

--- a/src/test/resources/org/eolang/lints/packs/single/redundant-object/catches-redundant-nested.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/redundant-object/catches-redundant-nested.yaml
@@ -7,7 +7,7 @@ sheets:
 asserts:
   - /defects[count(defect[@severity='warning'])=1]
   - /defects/defect[@line='3']
-  - /defects/defect[1][normalize-space()='The object "xo" is redundant, consider inline it instead']
+  - /defects/defect[1][normalize-space()='The object "xo" is redundant and may be inlined']
 input: |
   # Foo.
   [] > foo
