--- a/src/test/resources/org/eolang/lints/packs/single/unused-void-attr/catches-unused-void-attr.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/unused-void-attr/catches-unused-void-attr.yaml
@@ -7,7 +7,7 @@ sheets:
 asserts:
   - /defects[count(defect[@severity='warning'])=1]
   - /defects/defect[@line='2']
-  - /defects/defect[1][normalize-space()='The void attribute "x" is unused anywhere in the object "foo"']
+  - /defects/defect[1][normalize-space()='The void attribute "x" is not used in the object "foo"']
 input: |
   # Foo
   [x] > foo
