--- a/src/test/resources/org/eolang/lints/packs/wpa/inconsistent-args/catches-inconsistency-in-nested-anonymous-formations.yaml
+++ b/src/test/resources/org/eolang/lints/packs/wpa/inconsistent-args/catches-inconsistency-in-nested-anonymous-formations.yaml
@@ -1,15 +1,21 @@
 # SPDX-FileCopyrightText: Copyright (c) 2016-2025 Objectionary.com
 # SPDX-License-Identifier: MIT
 ---
+# @todo #624:60min Enable `catches-inconsistency-in-nested-anonymous-formations` test story.
+#  For now, its disabled because `LtInconsistentArgs` fails to convert parent tree path into
+#  searchable XPath for the XMIR. We should change our logic in both `LtInconsistentArgs#voidFqn()`
+#  and `VoidXpath`. Don't forget to enable `catches-inconsistency-resolving-anonymous-path.yaml`,
+#  `catches-inconsistency-when-parent-object-lacks-name.yaml`, and test stories as well.
+skip: true
 lints:
   - inconsistent-args
 asserts:
   - /defects[count(defect[@severity='warning'])=2]
-  - /defects/defect[@line='7']
-  - /defects/defect[@line='8']
-  - /defects/defect[contains(normalize-space(), 'foo.@.:anonymous.$.x.∅')]
-  - /defects/defect[contains(normalize-space(), 'clashes with [foo:7]')]
-  - /defects/defect[contains(normalize-space(), 'clashes with [foo:8]')]
+  - /defects/defect[@line='9']
+  - /defects/defect[@line='10']
+  - /defects/defect[contains(normalize-space(), 'foo.@.:anonymous.@.:anonymous.@.:anonymous.$.x.∅')]
+  - /defects/defect[contains(normalize-space(), 'clashes with [foo:9]')]
+  - /defects/defect[contains(normalize-space(), 'clashes with [foo:10]')]
 foo.eo: |
   # Foo.
   [] > foo
