--- a/src/test/resources/org/eolang/lints/packs/wpa/inconsistent-args/catches-inconsistency-in-nested-anonymous-formations.yaml
+++ b/src/test/resources/org/eolang/lints/packs/wpa/inconsistent-args/catches-inconsistency-in-nested-anonymous-formations.yaml
@@ -1,6 +1,7 @@
 # SPDX-FileCopyrightText: Copyright (c) 2016-2025 Objectionary.com
 # SPDX-License-Identifier: MIT
 ---
+# yamllint disable rule:line-length
 # @todo #624:60min Enable `catches-inconsistency-in-nested-anonymous-formations` test story.
 #  For now, its disabled because `LtInconsistentArgs` fails to convert parent tree path into
 #  searchable XPath for the XMIR. We should change our logic in both `LtInconsistentArgs#voidFqn()`
