bug(#635): consistency in incorrect-spdx

--- a/src/test/resources/org/eolang/lints/packs/single/incorrect-spdx/passes-on-good-spdx-metas.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/incorrect-spdx/passes-on-good-spdx-metas.yaml
@@ -6,7 +6,7 @@ sheets:
 asserts:
   - /defects[count(defect[@severity='warning'])=0]
 input: |
-  +spdx SPDX-FileCopyrightText foo
+  +spdx SPDX-FileCopyrightText: foo
   +spdx SPDX-License-Identifier: MIT
 
   # Foo.
