bug(#642): incorrect-test-object-name

--- a/src/test/resources/org/eolang/lints/packs/single/incorrect-test-object-name/allows-many-one-letter-parts.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/incorrect-test-object-name/allows-many-one-letter-parts.yaml
@@ -6,8 +6,8 @@ sheets:
 asserts:
   - /defects[count(defect[@severity='warning'])=0]
 input: |
-  +tests
-
-  # Test.
-  [] > f-o-o
-    42 > @
+  # Foo.
+  [] > foo
+    # Test.
+    [] +> f-o-o
+      42 > @
