--- a/src/test/resources/org/eolang/lints/packs/single/incorrect-test-object-name/catches-camel.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/incorrect-test-object-name/catches-camel.yaml
@@ -7,8 +7,8 @@ asserts:
   - /defects[count(defect[@severity='warning'])=1]
   - /defects/defect[@line='4']
 input: |
-  +tests
-
-  # Test.
-  [] > tEst
-    42 > foo
+  # Foo.
+  [] > foo
+    # Test.
+    [] +> tEst
+      42 > foo
