--- a/src/test/resources/org/eolang/lints/packs/single/incorrect-test-object-name/allows-double-with-dash.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/incorrect-test-object-name/allows-double-with-dash.yaml
@@ -6,8 +6,8 @@ sheets:
 asserts:
   - /defects[count(defect[@severity='warning'])=0]
 input: |
-  +tests
-
-  # Test.
-  [] > runs-something
-    42 > fooB
+  # Foo.
+  [] > foo
+    # Test.
+    [] +> runs-something
+      42 > fooB
