--- a/src/test/resources/org/eolang/lints/packs/single/incorrect-test-object-name/allows-one-letter-parts.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/incorrect-test-object-name/allows-one-letter-parts.yaml
@@ -6,8 +6,8 @@ sheets:
 asserts:
   - /defects[count(defect[@severity='warning'])=0]
 input: |
-  +tests
-
-  # Test.
-  [] > tests-ln-of-e-one-is-one
-    42 > @
+  # Foo.
+  [] > foo
+    # Test.
+    [] +> tests-ln-of-e-one-is-one
+      42 > @
