bug(#642): no-attribute-formation

--- a/src/test/resources/org/eolang/lints/packs/single/no-attribute-formation/allows-in-tests.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/no-attribute-formation/allows-in-tests.yaml
@@ -6,8 +6,7 @@ sheets:
 asserts:
   - /defects[count(defect)=0]
 input: |
-  +tests
-
-  # No comments.
-  [] > runs-analysis
-    52 > spb
+  # Foo.
+  [x] > foo
+    [] +> checks-something
+      42 > @
