bug(#642): unit-test-without-phi

--- a/src/test/resources/org/eolang/lints/packs/single/unit-test-without-phi/allows-test-with-abstract-phi.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/unit-test-without-phi/allows-test-with-abstract-phi.yaml
@@ -6,11 +6,9 @@ sheets:
 asserts:
   - /defects[count(defect)=0]
 input: |
-  +tests
-
-  # Tests.
-  [] > tests
+  # Foo.
+  [] > foo
     # Specific test.
-    [] > test
+    [] +> test
       [] > @
         true > @
