--- a/src/test/resources/org/eolang/lints/packs/single/unit-test-without-phi/allows-correct-test-objects.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/unit-test-without-phi/allows-correct-test-objects.yaml
@@ -6,11 +6,9 @@ sheets:
 asserts:
   - /defects[count(defect[@severity='warning'])=0]
 input: |
-  +tests
-
-  # Test.
-  [] > stdout-tests
+  # Foo.
+  [] > foo
     # Test works.
-    [] > prints-hello-world
+    [] +> prints-hello-world
       stdout > @
         "Hello, world"
