--- a/src/test/resources/org/eolang/lints/packs/single/unit-test-without-phi/allows-non-formation-test-to-not-have-phi.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/unit-test-without-phi/allows-non-formation-test-to-not-have-phi.yaml
@@ -6,12 +6,11 @@ sheets:
 asserts:
   - /defects[count(defect[@severity='warning'])=0]
 input: |
-  +tests
-
-  # Test.
-  [] > stdout-tests
-    true > works-just-fine
+  # Foo.
+  [] > foo
     # Test works.
-    [] > prints-hello-world
+    true +> works-just-fine
+    # Test works.
+    [] +> prints-hello-world
       stdout > @
         "Hello, world"
