--- a/src/test/resources/org/eolang/lints/packs/single/unit-test-without-phi/catches-only-nested-test-object-without-phi.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/unit-test-without-phi/catches-only-nested-test-object-without-phi.yaml
@@ -5,13 +5,11 @@ sheets:
   - /org/eolang/lints/tests/unit-test-without-phi.xsl
 asserts:
   - /defects[count(defect[@severity='warning'])=1]
-  - /defects/defect[@line='6']
+  - /defects/defect[@line='4']
   - /defects/defect[1][contains(normalize-space(), 'works-dummy')]
 input: |
-  +tests
-
-  # Test suite for `foo`.
-  [] > foo-tests
+  # Foo.
+  [] > foo
     # Unit test.
-    [] > works-dummy
+    [] +> works-dummy
       true > i
