--- a/src/test/resources/org/eolang/lints/packs/single/unit-test-without-phi/catches-test-with-phi-under-deeply-nested-abstract.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/unit-test-without-phi/catches-test-with-phi-under-deeply-nested-abstract.yaml
@@ -5,14 +5,12 @@ sheets:
   - /org/eolang/lints/tests/unit-test-without-phi.xsl
 asserts:
   - /defects[count(defect[@severity='warning'])=1]
-  - /defects/defect[@line='6']
+  - /defects/defect[@line='4']
 input: |
-  +tests
-
-  # Tests.
-  [] > tests
+  # Bar.
+  [] > bar
     # Specific test.
-    [] > test
+    [] +> test
       [] > inner
         [] > deeper
           true > @
