--- a/src/test/resources/org/eolang/lints/packs/wpa/inconsistent-args/allows-consistent-args-in-read.yaml
+++ b/src/test/resources/org/eolang/lints/packs/wpa/inconsistent-args/allows-consistent-args-in-read.yaml
@@ -12,16 +12,15 @@ tee-input-tests.eo: |
   +alias org.eolang.io.tee-input
   +architect yegor256@gmail.com
   +home https://github.com/objectionary/eo
-  +tests
   +package org.eolang.io
   +version 0.0.0
   +spdx SPDX-FileCopyrightText Copyright (c) 2016-2025 Objectionary.com
   +spdx SPDX-License-Identifier: MIT
 
   # Tee tests.
-  [] > tee-input-tests
+  [] > tee-input
     # This unit test is supposed to check the functionality of the corresponding object.
-    [] > tests-reads-from-bytes-and-writes-to-memory
+    [] +> tests-reads-from-bytes-and-writes-to-memory
       eq. > @
         malloc.of
           5
@@ -34,7 +33,7 @@ tee-input-tests.eo: |
         01-02-03-04-05
 
     # This unit test is supposed to check the functionality of the corresponding object.
-    [] > tests-reads-from-bytes-and-writes-to-two-memory-blocks
+    [] +> tests-reads-from-bytes-and-writes-to-two-memory-blocks
       eq. > @
         malloc.of
           6
