--- a/pom.xml
+++ b/pom.xml
@@ -335,6 +335,42 @@
       </build>
     </profile>
     <profile>
+      <id>hone</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.eolang</groupId>
+            <artifactId>hone-maven-plugin</artifactId>
+            <version>0.0.32</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>build</goal>
+                  <goal>optimize</goal>
+                  <goal>rmi</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>com.github.volodya-lombrozo</groupId>
+            <artifactId>jtcop-maven-plugin</artifactId>
+            <version>1.3.5</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>benchmark</id>
       <activation>
         <activeByDefault>false</activeByDefault>
