bug(#654): check for dot

--- a/src/test/resources/org/eolang/lints/packs/single/self-referencing/catches-same-name.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/self-referencing/catches-same-name.yaml
@@ -4,9 +4,10 @@
 sheets:
   - /org/eolang/lints/critical/self-referencing.xsl
 asserts:
-  - /defects[count(defect)=0]
+  - /defects[count(defect[@severity='error'])=1]
+  - /defects/defect[@line='3']
 input: |
   # App.
   [] > app
     a. > foo
-      b > bar!
+      b > foo
