bug(#663): all passes

--- a/src/test/resources/org/eolang/lints/packs/single/formation-with-as-attributes/allows-as-attributes-in-application.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/formation-with-as-attributes/allows-as-attributes-in-application.yaml
@@ -6,6 +6,8 @@ sheets:
 asserts:
   - /defects[count(defect)=0]
 document: |
-  <o name='happl' base='Q.org.eolang.f' line='1'>
-    <o as='boom' line='2'/>
-  </o>
+  <object>
+    <o name='happl' base='Q.org.eolang.f' line='1'>
+      <o as='boom' line='2'/>
+    </o>
+  </object>
