--- a/src/test/resources/org/eolang/lints/packs/single/formation-with-as-attributes/catches-anonymous-formation.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/formation-with-as-attributes/catches-anonymous-formation.yaml
@@ -5,8 +5,10 @@ sheets:
   - /org/eolang/lints/critical/formation-with-as-attributes.xsl
 asserts:
   - /defects[count(defect[@severity='critical'])=1]
-  - /defects/defect[@line='2']
+  - /defects/defect[@line='3']
 document: |
-  <o line='1'>
-    <o as='due' line='2'/>
-  </o>
+  <object>
+    <o line='2'>
+      <o as='due' line='3'/>
+    </o>
+  </object>
