--- a/src/test/resources/org/eolang/lints/packs/single/formation-with-as-attributes/catches-formation-with-as-attributes.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/formation-with-as-attributes/catches-formation-with-as-attributes.yaml
@@ -6,6 +6,8 @@ sheets:
 asserts:
   - /defects[count(defect[@severity='critical'])=1]
 document: |
-  <o name='a'>
-    <o as='b'/>
-  </o>
+  <object>
+    <o name='a'>
+      <o as='b'/>
+    </o>
+  </object>
