chore(#676): proper layout and syntax

--- a/.vale.ini
+++ b/.vale.ini
@@ -8,9 +8,8 @@ Packages = Google, Microsoft, proselint
 
 [accept]
 Token = [
-  "application" # EO and PHI term, means object application
+  "application" ; EO and PHI term, means object application
 ]
-
 
 [*.md]
 ;; @todo #540:60min Add a new style package - `write-good` - to both this list and the package list.
