chore(#676): try comment up

--- a/.vale.ini
+++ b/.vale.ini
@@ -8,7 +8,8 @@ Packages = Google, Microsoft, proselint
 
 [accept]
 Token = [
-  "application" ; EO and PHI term, means object application
+  ; EO and PHI term, means object application
+  "application"
 ]
 
 [*.md]
