bug(#676): methods must not have as attributes

--- a/src/test/resources/org/eolang/lints/packs/single/application-without-as-attributes/catches-absence-of-as-attributes.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/application-without-as-attributes/catches-absence-of-as-attributes.yaml
@@ -6,6 +6,7 @@ sheets:
 asserts:
   - /defects[count(defect[@severity='error'])=1]
   - /defects/defect[@line='2']
+  - /defects/defect[contains(normalize-space(), 'Q.org.eolang.f')]
 document: |
   <object>
     <o name="app">
