--- a/src/test/resources/org/eolang/lints/packs/single/atom-and-base/atom-and-base-coexist.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/atom-and-base/atom-and-base-coexist.yaml
@@ -7,7 +7,7 @@ asserts:
   - /defects[count(defect[@context and @severity='critical'])=1]
 document: |
   <object author="tests">
-    <o name="obj" base="Q.foo">
+    <o name="obj" base="Φ.foo">
       <o name="λ"/>
     </o>
   </object>
