--- a/src/test/resources/org/eolang/lints/packs/single/incorrect-rt-parts/prints-context-when-lines-empty.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/incorrect-rt-parts/prints-context-when-lines-empty.yaml
@@ -14,5 +14,5 @@ document: |
         <part>hello</part>
       </meta>
     </metas>
-    <o base="Q.org.eolang.foo" pos="5"/>
+    <o base="Φ.org.eolang.foo" pos="5"/>
   </object>
