--- a/src/test/resources/org/eolang/lints/packs/single/named-object-abstract-nested/allows-nested-bases.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/named-object-abstract-nested/allows-nested-bases.yaml
@@ -9,10 +9,10 @@ document: |
   <object author="tests">
     <o name="foo">
       <o base="x" name="@">
-        <o base="$.a"/>
+        <o base="ξ.a"/>
       </o>
       <o base="y" name="a">
-        <o base="$.b"/>
+        <o base="ξ.b"/>
       </o>
       <o base="z" name="b"/>
     </o>
