--- a/src/test/resources/org/eolang/lints/packs/single/object-has-data/allows-data-in-inner-objects.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/object-has-data/allows-data-in-inner-objects.yaml
@@ -8,7 +8,7 @@ asserts:
 document: |
   <object author="tests">
     <o name="foo">
-      <o name="inner" base="Q.org.eolang.bytes">
+      <o name="inner" base="Φ.org.eolang.bytes">
         <o>12-23-FF</o>
       </o>
     </o>
