--- a/src/test/resources/org/eolang/lints/packs/single/rt-without-atoms/prints-context-when-lines-empty.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/rt-without-atoms/prints-context-when-lines-empty.yaml
@@ -15,5 +15,5 @@ document: |
         <part>something</part>
       </meta>
     </metas>
-    <o base="Q.org.eolang.foo"/>
+    <o base="Φ.org.eolang.foo"/>
   </object>
