--- a/src/test/resources/org/eolang/lints/packs/single/unknown-rt/prints-context-when-lines-empty.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/unknown-rt/prints-context-when-lines-empty.yaml
@@ -14,5 +14,5 @@ document: |
         <part>test</part>
       </meta>
     </metas>
-    <o base="Q.org.eolang.foo"/>
+    <o base="Φ.org.eolang.foo"/>
   </object>
