--- a/src/test/resources/org/eolang/lints/packs/single/void-attributes-not-higher-than-other/allows-void-attributes-at-top.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/void-attributes-not-higher-than-other/allows-void-attributes-at-top.yaml
@@ -10,6 +10,6 @@ document: |
     <o name="foo">
       <o base="∅" name="x"/>
       <o base="∅" name="y"/>
-      <o base="Q.foo" name="z"/>
+      <o base="Φ.foo" name="z"/>
     </o>
   </object>
