--- a/src/test/resources/org/eolang/lints/packs/single/void-attributes-not-higher-than-other/prints-context-when-lines-empty.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/void-attributes-not-higher-than-other/prints-context-when-lines-empty.yaml
@@ -9,7 +9,7 @@ document: |
   <object author="tests">
     <o name="foo">
       <o base="∅" name="x"/>
-      <o base="Q.foo" name="z"/>
+      <o base="Φ.foo" name="z"/>
       <o base="∅" name="y"/>
     </o>
   </object>
