--- a/src/test/resources/org/eolang/lints/packs/single/bytes-without-data/catches-bytes-without-data.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/bytes-without-data/catches-bytes-without-data.yaml
@@ -7,10 +7,10 @@ sheets:
 asserts:
   - /defects[count(defect[@severity='critical'])=1]
   - /defects/defect[@line='1']
-  - /defects/defect[1][normalize-space()='Objects with parent @base equal to "Q.org.eolang.bytes" must contain data, while "bar" object does not']
+  - /defects/defect[1][normalize-space()='Objects with parent @base equal to "Φ.org.eolang.bytes" must contain data, while "bar" object does not']
 document: |
   <object author="tests">
-    <o name="bar" base="Q.org.eolang.bytes" line="1">
+    <o name="bar" base="Φ.org.eolang.bytes" line="1">
       <o/>
     </o>
   </object>
