--- a/src/test/resources/org/eolang/lints/packs/single/duplicate-as-attribute/checks-only-parent-level-attributes.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/duplicate-as-attribute/checks-only-parent-level-attributes.yaml
@@ -7,7 +7,7 @@ asserts:
   - /defects[count(defect[@severity='warning'])=0]
 document: |
   <object author="tests">
-    <o base="Q.foo">
+    <o base="Φ.foo">
       <o base="f1" as="bar"/>
       <o base="f2">
         <o base="f3-nested" as="bar"/>
