--- a/src/test/resources/org/eolang/lints/packs/single/duplicate-as-attribute/reports-line-correctly.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/duplicate-as-attribute/reports-line-correctly.yaml
@@ -8,7 +8,7 @@ asserts:
   - /defects/defect[@line='2']
 document: |
   <object author="tests">
-    <o base="Q.foo" line="2">
+    <o base="Φ.foo" line="2">
       <o base="f1" as="bar"/>
       <o base="f2" as="bar"/>
     </o>
