--- a/src/test/resources/org/eolang/lints/packs/single/name-outside-of-abstract-object/prints-context-when-lines-empty.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/name-outside-of-abstract-object/prints-context-when-lines-empty.yaml
@@ -7,7 +7,7 @@ asserts:
   - /defects[count(defect[@context and @severity='critical'])=1]
 document: |
   <object author="tests">
-    <o base="Q.foo">
+    <o base="Φ.foo">
       <o name="bar"/>
     </o>
   </object>
