--- a/src/test/resources/org/eolang/lints/packs/single/object-has-data/allows-data-in-bytes.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/object-has-data/allows-data-in-bytes.yaml
@@ -7,7 +7,7 @@ asserts:
   - /defects[count(defect[@severity='critical'])=0]
 document: |
   <object author="tests">
-    <o name="foo" base="Q.org.eolang.bytes">
+    <o name="foo" base="Φ.org.eolang.bytes">
       <o>A1-B2-C3-D4-E5</o>
     </o>
   </object>
