--- a/src/test/resources/org/eolang/lints/packs/single/sparse-decoration/prints-context-when-lines-empty.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/sparse-decoration/prints-context-when-lines-empty.yaml
@@ -8,8 +8,8 @@ asserts:
 document: |
   <object author="tests">
     <o name="decorates-num">
-      <o base="Q.org.eolang.number" name="@">
-        <o base="Q.org.eolang.bytes">40-14-00-00-00-00-00-00</o>
+      <o base="Φ.org.eolang.number" name="φ">
+        <o base="Φ.org.eolang.bytes">40-14-00-00-00-00-00-00</o>
       </o>
     </o>
   </object>
