--- a/src/test/resources/org/eolang/lints/packs/single/sprintf-without-formatters/catches-sprintf-without-formatters.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/sprintf-without-formatters/catches-sprintf-without-formatters.yaml
@@ -7,7 +7,7 @@ sheets:
 asserts:
   - /defects[count(defect[@severity='warning'])=1]
   - /defects/defect[@line='4']
-  - /defects/defect[1][normalize-space()='According to the formatting template of the "Q.org.eolang.txt.sprintf" object, "Hello⌴Jeff!" does not have any supported formatters ("%s", "%d", "%f", "%x", "%b"), which makes no sense to use "Q.org.eolang.txt.sprintf"']
+  - /defects/defect[1][normalize-space()='According to the formatting template of the "Φ.org.eolang.txt.sprintf" object, "Hello⌴Jeff!" does not have any supported formatters ("%s", "%d", "%f", "%x", "%b"), which makes no sense to use "Φ.org.eolang.txt.sprintf"']
 input: |
   # App.
   [] > app
