--- a/src/test/resources/org/eolang/lints/packs/single/void-attributes-not-higher-than-other/allows-empty-void-attributes.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/void-attributes-not-higher-than-other/allows-empty-void-attributes.yaml
@@ -8,7 +8,7 @@ asserts:
 document: |
   <object author="tests">
     <o name="foo">
-      <o base="Q.foo" name="x"/>
-      <o base="Q.foo" name="y"/>
+      <o base="Φ.foo" name="x"/>
+      <o base="Φ.foo" name="y"/>
     </o>
   </object>
