--- a/src/test/resources/org/eolang/lints/packs/single/void-attributes-not-higher-than-other/catches-void-attributes-lower-than-other.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/void-attributes-not-higher-than-other/catches-void-attributes-lower-than-other.yaml
@@ -10,7 +10,7 @@ document: |
   <object author="tests">
     <o name="foo">
       <o line="1" base="∅" name="x"/>
-      <o line="1" base="Q.foo" name="z"/>
+      <o line="1" base="Φ.foo" name="z"/>
       <o line="1" base="∅" name="y"/>
     </o>
   </object>
