bug(#711): WPA passes

--- a/src/test/resources/org/eolang/lints/packs/single/anonymous-objects-inside-formation/catches-anonymous.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/anonymous-objects-inside-formation/catches-anonymous.yaml
@@ -10,7 +10,7 @@ document: |
   <object author="tests">
     <o line="1" name="li">
       <o line="2">
-        <o line="3" base="Q.org.eolang.x" name="somewhat"/>
+        <o line="3" base="Φ.org.eolang.x" name="somewhat"/>
       </o>
     </o>
   </object>
