--- a/src/test/resources/org/eolang/lints/packs/single/duplicate-as-attribute/allows-only-one-attribute.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/duplicate-as-attribute/allows-only-one-attribute.yaml
@@ -8,6 +8,6 @@ asserts:
 document: |
   <object author="tests">
     <o base="Φ.foo" name="f">
-      <o base="f1" as="bar"/>
+      <o base="Φ.f1" as="bar"/>
     </o>
   </object>
