--- a/src/test/resources/org/eolang/lints/packs/single/duplicate-as-attribute/allows-when-attributes-empty.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/duplicate-as-attribute/allows-when-attributes-empty.yaml
@@ -8,6 +8,6 @@ asserts:
 document: |
   <object author="tests">
     <o base="Φ.man" name="jeff">
-      <o base="home"/>
+      <o base="Φ.home"/>
     </o>
   </object>
