--- a/src/test/resources/org/eolang/lints/packs/single/many-void-attributes/prints-context-when-lines-empty.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/many-void-attributes/prints-context-when-lines-empty.yaml
@@ -14,6 +14,6 @@ document: |
        <o base="∅" name="d"/>
        <o base="∅" name="e"/>
        <o base="∅" name="f"/>
-       <o base="Φ.org.eolang.boom" name="@"/>
+       <o base="Φ.org.eolang.boom" name="φ"/>
     </o>
   </object>
