--- a/src/test/resources/org/eolang/lints/packs/single/phi-is-not-first/ignores-void-attributes.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/phi-is-not-first/ignores-void-attributes.yaml
@@ -9,6 +9,6 @@ document: |
   <object author="tests">
     <o name="f">
       <o base="∅" name="i"/>
-      <o base="Φ.org.eolang.seq" name="@"/>
+      <o base="Φ.org.eolang.seq" name="φ"/>
     </o>
   </object>
