--- a/src/test/resources/org/eolang/lints/packs/wpa/inconsistent-args/catches-inconsistency-in-both-voids-and-objects.yaml
+++ b/src/test/resources/org/eolang/lints/packs/wpa/inconsistent-args/catches-inconsistency-in-both-voids-and-objects.yaml
@@ -9,8 +9,8 @@ asserts:
   - /defects/defect[@line='4']
   - /defects/defect[@line='6']
   - /defects/defect[@line='7']
-  - /defects/defect[contains(normalize-space(), 'f.foo.$.x.∅')]
-  - /defects/defect[contains(normalize-space(), 'f.$.x')]
+  - /defects/defect[contains(normalize-space(), 'f.foo.ξ.x.∅')]
+  - /defects/defect[contains(normalize-space(), 'f.ξ.x')]
   - /defects/defect[contains(normalize-space(), 'clashes with [f:3]')]
   - /defects/defect[contains(normalize-space(), 'clashes with [f:4]')]
   - /defects/defect[contains(normalize-space(), 'clashes with [f:6]')]
