--- a/src/test/resources/org/eolang/lints/packs/single/anonymous-objects-inside-formation/allows-named-objects-inside.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/anonymous-objects-inside-formation/allows-named-objects-inside.yaml
@@ -9,7 +9,7 @@ document: |
   <object author="tests">
     <o line="1" name="li">
       <o line="2" name="nested">
-        <o line="3" base="Q.org.eolang.x" name="somewhat"/>
+        <o line="3" base="Φ.org.eolang.x" name="somewhat"/>
       </o>
     </o>
   </object>
