--- a/src/test/resources/org/eolang/lints/packs/single/duplicate-as-attribute/reports-line-correctly.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/duplicate-as-attribute/reports-line-correctly.yaml
@@ -9,7 +9,7 @@ asserts:
 document: |
   <object author="tests">
     <o base="Φ.foo" line="2">
-      <o base="f1" as="bar"/>
-      <o base="f2" as="bar"/>
+      <o base="Φ.f1" as="bar"/>
+      <o base="Φ.f2" as="bar"/>
     </o>
   </object>
