--- a/src/test/resources/org/eolang/lints/packs/single/empty-object/allows-good-objects.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/empty-object/allows-good-objects.yaml
@@ -9,7 +9,7 @@ document: |
   <object author="tests">
     <o line="2" name="main" pos="0">
        <o base="∅" line="2" name="x" pos="1"/>
-       <o base=".print" line="3" name="@" pos="2">
+       <o base=".print" line="3" name="φ" pos="2">
           <o base="stdout" line="4" pos="4">
              <o base="string" line="4" pos="11">48-65-6C-6C-6F-21</o>
              <o base="x" line="4" pos="20"/>
