--- a/src/test/resources/org/eolang/lints/packs/single/named-object-abstract-nested/catches-multiple-named-nested-abstract.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/named-object-abstract-nested/catches-multiple-named-nested-abstract.yaml
@@ -9,7 +9,7 @@ asserts:
   - /defects/defect[@line='3']
 document: |
   <object author="tests">
-    <o base="Φ.x" name="@" line="1">
+    <o base="Φ.x" name="φ" line="1">
       <o base="y" name="a" line="2">
         <o base="z" name="b" line="3"/>
       </o>
