bug(#711): XMIR validation passes

--- a/src/test/resources/org/eolang/lints/packs/single/application-without-as-attributes/allows-methods-without-as-attributes.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/application-without-as-attributes/allows-methods-without-as-attributes.yaml
@@ -8,9 +8,9 @@ asserts:
 document: |
   <object author="tests">
     <o base=".bar">
-      <o base="Q.baz">
-        <o base="Q.x" as="α0"/>
+      <o base="Φ.baz">
+        <o base="Φ.x" as="α0"/>
       </o>
-      <o base="Q.y" as="α0"/>
+      <o base="Φ.y" as="α0"/>
     </o>
   </object>
