--- a/src/test/resources/org/eolang/lints/packs/single/bytes-without-data/allows-non-abstract-without-data.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/bytes-without-data/allows-non-abstract-without-data.yaml
@@ -8,6 +8,6 @@ asserts:
 document: |
   <object author="tests">
     <o name="bar" base="Φ.org.eolang.bytes">
-      <o base="f"/>
+      <o base="Φ.f"/>
     </o>
   </object>
