--- a/src/test/resources/org/eolang/lints/packs/single/incorrect-bytes-format/catches-incorrect-bytes-format.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/incorrect-bytes-format/catches-incorrect-bytes-format.yaml
@@ -33,11 +33,11 @@ document: |
         哈囉世界
       </o>
       <o name="correct-inners" line="42">
-        <o base="first">
-          <o base="org.eolang.bytes">3F-F0-00-00-00-00-00-00</o>
+        <o base="Φ.first">
+          <o base="Φ.org.eolang.bytes">3F-F0-00-00-00-00-00-00</o>
         </o>
-        <o base="second">
-          <o base="org.eolang.bytes">00-00-00-00-00-00-00-00</o>
+        <o base="Φ.second">
+          <o base="Φ.org.eolang.bytes">00-00-00-00-00-00-00-00</o>
         </o>
       </o>
     </o>
