--- a/src/test/resources/org/eolang/lints/packs/single/line-is-absent/missing-line.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/line-is-absent/missing-line.yaml
@@ -9,6 +9,6 @@ document: |
   <object author="tests">
     <o>
       <o name="foo"/>
-      <o name="bar" base="foo"/>
+      <o name="bar" base="Φ.foo"/>
     </o>
   </object>
