--- a/src/test/resources/org/eolang/lints/packs/single/named-object-abstract-nested/allows-chain-of-bases.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/named-object-abstract-nested/allows-chain-of-bases.yaml
@@ -8,8 +8,8 @@ asserts:
 document: |
   <object author="tests">
     <o name="foo">
-      <o base="xyz">
-        <o base="num"/>
+      <o base="Φ.xyz">
+        <o base="Φ.num"/>
       </o>
     </o>
   </object>
