--- a/src/test/resources/org/eolang/lints/packs/single/empty-object/allows-good-objects-with-multiple-void-attributes.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/empty-object/allows-good-objects-with-multiple-void-attributes.yaml
@@ -11,9 +11,9 @@ document: |
        <o base="∅" line="2" name="x" pos="1"/>
        <o base="∅" line="2" name="y" pos="1"/>
        <o base=".print" line="3" name="φ" pos="2">
-          <o base="stdout" line="4" pos="4">
-             <o base="string" line="4" pos="11">48-65-6C-6C-6F-21</o>
-             <o base="x" line="4" pos="20"/>
+          <o base="Φ.stdout" line="4" pos="4">
+             <o base="Φ.string" line="4" pos="11">48-65-6C-6C-6F-21</o>
+             <o base="Φ.x" line="4" pos="20"/>
           </o>
        </o>
     </o>
