--- a/src/test/resources/org/eolang/lints/packs/single/named-object-abstract-nested/allows-named-object-on-the-first-level.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/named-object-abstract-nested/allows-named-object-on-the-first-level.yaml
@@ -9,7 +9,7 @@ document: |
   <object author="tests">
     <o name="foo">
       <o name="bar">
-        <o base="num"/>
+        <o base="Φ.num"/>
       </o>
     </o>
   </object>
