--- a/src/test/resources/org/eolang/lints/packs/single/application-without-as-attributes/allows-when-attributes-have-as.yaml
+++ b/src/test/resources/org/eolang/lints/packs/single/application-without-as-attributes/allows-when-attributes-have-as.yaml
@@ -9,8 +9,8 @@ document: |
   <object author="tests">
     <o name="app">
       <o base="Φ.org.eolang.start" name="φ" line="2">
-        <o base="Φ.org.eoang.x" as="α0" line="3"/>
-        <o base="Φ.org.eoang.y" as="α1" line="4"/>
+        <o base="Φ.org.eolang.x" as="α0" line="3"/>
+        <o base="Φ.org.eolang.y" as="α1" line="4"/>
       </o>
     </o>
   </object>
