#711: Update Maven profiles in .rultor.yml configuration file.

--- a/.rultor.yml
+++ b/.rultor.yml
@@ -14,7 +14,7 @@ install: |
   pdd --file=/dev/null
 merge:
   script: |
-    mvn clean install -Pqulice --errors -Dstyle.color=never
+    mvn clean install -P!hone -Pqulice --errors -Dstyle.color=never
 release:
   pre: false
   script: |-
@@ -23,4 +23,4 @@ release:
     git commit -am "${tag}"
     mvn clean install -Dinvoker.skip
     export MAVEN_OPTS="--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED"
-    mvn clean deploy -Pobjectionary -Psonatype --errors --settings ../settings.xml -Dstyle.color=never
+    mvn clean deploy -P!hone -Pobjectionary -Psonatype --errors --settings ../settings.xml -Dstyle.color=never
